k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth2-sample-deployment
  namespace: oauth2-sample
  labels:
    app: oauth2-sample
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth2-sample
  template:
    metadata:
      name: oauth2-sample
      labels:
        app: oauth2-sample
    spec:
      containers:
        - name: oauth2-sample
          image: ghcr.io/umalmyha/oauth2-sample:latest
          imagePullPolicy: Always
