k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oauth2-sample-service
  namespace: oauth2-sample
spec:
  selector:
    app: oauth2-sample
  ports:
    - port: 8080
      targetPort: 8080
  type: NodePort
